--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ section img.background {
 
 h1 {
   font-family: "Montserrat", sans-serif;
-  color :rgba(255, 255, 255, 0.582);
+  color :rgb(255, 255, 255);
   font-size: 7rem;
   font-weight: 500;
   line-height: 0.8;
@@ -57,6 +57,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
+  color : rgb(255, 255, 255);
   font-weight: 400;
   margin: 0;
   padding-top: 1rem;
